{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 144,
  "lineage": "276fe1ca-075d-6c78-6060-5194e2393441",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0aa510ab104343666",
            "domain": "vpc",
            "id": "eipalloc-08f4d90afcc635967",
            "network_interface": "eni-0729012c473a24c9b",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-3-220-158-103.compute-1.amazonaws.com",
            "public_ip": "3.220.158.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:313744602959:instance/i-0dc3cb34fa910a4c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc3cb34fa910a4c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MYUSE1KP",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6264c3a1155510c",
            "private_dns": "ip-10-0-1-222.ec2.internal",
            "private_ip": "10.0.1.222",
            "public_ip": "54.90.21.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-014b0a5bbb7651e06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09ed4122f32e91190"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054823b68370b3bcc",
            "tags": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09ed4122f32e91190"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sec",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:313744602959:instance/i-0518615fece00dca5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0518615fece00dca5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MYUSE1KP",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0d08816ed5dd8f4",
            "private_dns": "ip-10-0-2-200.ec2.internal",
            "private_ip": "10.0.2.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09df465388521775a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03185cb2835bd817b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bf1ad1634b13b91",
            "tags": {
              "Name": "redis_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03185cb2835bd817b"
            ]
          },
          "dependencies": [
            "aws_security_group.redis_sec",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:313744602959:instance/i-0118d3df022b6846e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0118d3df022b6846e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MYUSE1KP",
            "monitoring": false,
            "primary_network_interface_id": "eni-084d7bb1b20250d53",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_ip": "35.175.126.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0553b64f92048f47c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03ff7fa8079e0fafe",
              "sg-0ece1e67058af440e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054823b68370b3bcc",
            "tags": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ff7fa8079e0fafe",
              "sg-0ece1e67058af440e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_ssh",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:313744602959:instance/i-0995f510f89076e5d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0995f510f89076e5d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MYUSE1KP",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2d983739c63b451",
            "private_dns": "ip-10-0-2-51.ec2.internal",
            "private_ip": "10.0.2.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-091012fabe22a772c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0908c43bf82f620ec"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bf1ad1634b13b91",
            "tags": {
              "Name": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0908c43bf82f620ec"
            ]
          },
          "dependencies": [
            "aws_security_group.worker_sec",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08a4981c7424c6950",
            "owner_id": "313744602959",
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f4d90afcc635967",
            "id": "nat-018fc2bb7d4bcb1a2",
            "network_interface_id": "eni-0729012c473a24c9b",
            "private_ip": "10.0.1.108",
            "public_ip": "3.220.158.103",
            "subnet_id": "subnet-054823b68370b3bcc",
            "tags": {
              "Name": "Nat GW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053329acc7e251327",
            "owner_id": "313744602959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-018fc2bb7d4bcb1a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main Private route"
            },
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0760d6b5689d0de8e",
            "owner_id": "313744602959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a4981c7424c6950",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main Public route"
            },
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d8562b68eb8f709",
            "route_table_id": "rtb-053329acc7e251327",
            "subnet_id": "subnet-08bf1ad1634b13b91"
          },
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_route_table.priv_route",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c42f9587120dc97",
            "route_table_id": "rtb-0760d6b5689d0de8e",
            "subnet_id": "subnet-054823b68370b3bcc"
          },
          "dependencies": [
            "aws_route_table.pub_route",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:security-group/sg-0ece1e67058af440e",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ece1e67058af440e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "313744602959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:security-group/sg-03ff7fa8079e0fafe",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ff7fa8079e0fafe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "313744602959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:security-group/sg-09ed4122f32e91190",
            "description": "Allow ssh from my ip",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ed4122f32e91190",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.191.204.226/32"
                ],
                "description": "SSH from My ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sec",
            "name_prefix": null,
            "owner_id": "313744602959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sec"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:security-group/sg-03185cb2835bd817b",
            "description": "Allow ssh from bastion and to port 6379 from worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03185cb2835bd817b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Port 6379 from worker",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0908c43bf82f620ec"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ed4122f32e91190"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "redis_sec",
            "name_prefix": null,
            "owner_id": "313744602959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis_sec"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.bastion_sec",
            "aws_security_group.worker_sec",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:security-group/sg-0908c43bf82f620ec",
            "description": "Allow ssh from bastion and to port 4000 from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0908c43bf82f620ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Port 4000 from webserver",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ece1e67058af440e"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ed4122f32e91190"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_sec",
            "name_prefix": null,
            "owner_id": "313744602959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker_sec"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.bastion_sec",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:subnet/subnet-08bf1ad1634b13b91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08bf1ad1634b13b91",
            "map_public_ip_on_launch": false,
            "owner_id": "313744602959",
            "tags": {
              "Name": "Private main"
            },
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:subnet/subnet-054823b68370b3bcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-054823b68370b3bcc",
            "map_public_ip_on_launch": false,
            "owner_id": "313744602959",
            "tags": {
              "Name": "Public main"
            },
            "vpc_id": "vpc-00fb0d4ebde71a29f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313744602959:vpc/vpc-00fb0d4ebde71a29f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a9f2a498183ec71",
            "default_route_table_id": "rtb-06f672222f1cf2085",
            "default_security_group_id": "sg-0a19539dee61f152d",
            "dhcp_options_id": "dopt-52cdcc29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00fb0d4ebde71a29f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f672222f1cf2085",
            "owner_id": "313744602959",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}